# python-class

./: LICENSE
analizador_genomico/: analizador.py
analizador_genomico/data/: secuencias_con_errores.fasta
argumentos/: argumento.py  arguments-basic.py  at_content.py  hola.py  suma.py
paquetes/: analizador2.py  analizador3.py
paquetes/Notas de módulos/: fasta_utils.py  import.py
paquetes/analizador_genomico_modulos/: README.md  analizador.py  bioestadisticas.py  fasta_utils.py  guardar_secuencias.py  test_analizador.py
paquetes/analizador_genomico_pkg/: README.md  main.py  pyproject.toml  setup.cfg
paquetes/analizador_genomico_pkg/doc/: detalles_proyecto.md
paquetes/analizador_genomico_pkg/src/analizador/: __init__.py  exportador.py  validador.py
paquetes/analizador_genomico_pkg/src/analizador.egg-info/: PKG-INFO  SOURCES.txt
peak_analysis-main/Avance_Proyecto/: extract_fasta.py
peak_analysis-main/Extractor_secuencias/: io_utils.py  main.py  peaks.py
peak_analysis-main/data/: union_peaks_file.tsv
peak_analysis-main/doc/: detalles_proyecto.md  test_cases.md
peak_analysis-main/output/: aaeR.fa  asnC.fa  csgD.fa  cusR.fa  cynR.fa  dgsA.fa  dicA.fa  envY.fa  gadW.fa  mazE.fa  melR.fa  pdhR.fa  rstA.fa  rutR.fa  sgrR.fa  trpR.fa  ttk.fa  uvrY.fa  uxuR.fa  yagI.fa  ybaQ.fa  ybcM.fa  ybhD.fa  ydjF.fa  yeaT.fa  yeiE.fa  yeiI.fa  yfeC.fa  yfeT.fa  yfhH.fa  ygeH.fa  yheO.fa  zur.fa
python_class/: ._argumentos
python_class/data/: genes.gff  (+2 more)
templatess/: casos-prueba.md  casos_prueba  detalles_proyecto  protocolo-proyecto.md  protocolo_proyecto
(+114 files in other folders)
